--- a/src/Calculator/Calculator.css
+++ b/src/Calculator/Calculator.css
@@ -1,22 +1,6 @@
-.Calculator {
-    width: 280px;
-}
-.CalcButton {
-    width: 70px;
-    height: 50px;
-}
-.Display {
-    height: 50px;
-    border: 1px solid #ccc;
-}
-.Display .operand {
-    height: 1.1em;
-    font-size: 1.5em;
-}
-.Display .result {
-    height: 1.1em;
-    text-align: right;
-    font-size: 1em;
-    font-style: italic;
-    color: green;
+.Calculator  Button{
+    height:55px !important;
+    width: 55px !important;
+    margin: 3px !important;
+    border-radius: 50px !important;
 }
